<resources>
    <string name="app_name">Calorie Meter</string>
    <string name="LogInButton">Log in</string>
    <string name="SignUpButton">Sign up</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="forgotPW">Forgot password ?</string>
    <string name="facebookbutton">Log in With facebook</string>
    <string name="messagebody">"Eat a healthy diet \n       Live a healthy life \n              Easily monitor your Calorie intake!"</string>

    <string name="firstnameHint">First name </string>
    <string name="lastnameHint">Last name </string>
    <string name="cancelButton">Cancel</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>

</resources>
