<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="bnz8.uw.tacoma.edu.caloriemeter.LogInActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"

        android:text=""
        android:hint="@string/emailHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextView"
        android:hint="@string/passwordHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogInButton"
        android:onClick="loggedInAction"/>

    <Button
        android:id="@+id/forgotpw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPW"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebookbutton" />


</LinearLayout>
