<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/ColorBlue"
    tools:context="bnz8.uw.tacoma.edu.caloriemeter.MainActivity">

    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/caloriemeter"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:fontFamily="serif"
        android:textColor="@color/ColorWhite"
        android:textSize="@dimen/activity_vertical_margin"
        android:freezesText="true"
        android:text="@string/messagebody"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/LogInButton"
        android:onClick="loginAction"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUpButton"
        android:onClick="signUpAction"/>




</LinearLayout>
